--- a/ide/Makefile
+++ b/ide/Makefile
@@ -16,8 +16,8 @@ CONSOLE = -mwindows
 TARGET = obj/$(CONFIG).$(PLATFORM)/ide$(E)
 
 OBJECTS = $(OBJECTS1) $(OBJECTS2)
-OBJECTS1 = $(OBJ)DirectoriesBox.o \
-	$(OBJ)FileSystemIterator.o $(OBJ)PathBox.o $(OBJ)SelectorBar.o $(OBJ)Stacker.o $(OBJ)StringsBox.o \
+OBJECTS1 = $(OBJ)DirectoriesBox.o $(OBJ)FileSystemIterator.o $(OBJ)layout.o \
+	$(OBJ)PathBox.o $(OBJ)SelectorBar.o $(OBJ)Stacker.o $(OBJ)StringsBox.o \
 	$(OBJ)ActiveCompilerDialog.o $(OBJ)CompilersDetectionDialog.o $(OBJ)FindInFilesDialog.o \
 	$(OBJ)GlobalSettingsDialog.o $(OBJ)NewProjectDialog.o $(OBJ)NodeProperties.o $(OBJ)ProjectActiveConfig.o \
 	$(OBJ)WorkspaceSettings.o $(OBJ)ProjectTabSettings.o $(OBJ)Project.o $(OBJ)ProjectConfig.o \
@@ -26,13 +26,12 @@ OBJECTS1 = $(OBJ)DirectoriesBox.o \
 	$(OBJ)findExp.o $(OBJ)findParams.o $(OBJ)Sheet.o $(OBJ)ToolBox.o $(OBJ)debugFindCtx.o \
 	$(OBJ)Debugger.o $(OBJ)debugTools.o $(OBJ)GDBDialog.o $(OBJ)process.o $(OBJ)BreakpointsView.o \
 	$(OBJ)CallStackView.o $(OBJ)OutputView.o $(OBJ)ThreadsView.o $(OBJ)WatchesView.o $(OBJ)ModelView.o \
-	$(OBJ)PictureEdit.o $(OBJ)about.o $(OBJ)ide.o
-OBJECTS2 = $(OBJ)IDESettings.o $(OBJ)OldIDESettings.o $(OBJ)ProjectSettings.o \
-	$(OBJ)$(MODULE).main$(O)
+	$(OBJ)PictureEdit.o $(OBJ)about.o $(OBJ)ide.o $(OBJ)IDESettings.o
+OBJECTS2 = $(OBJ)OldIDESettings.o $(OBJ)ProjectSettings.o $(OBJ)$(MODULE).main$(O)
 
 COBJECTS = $(COBJECTS1) $(COBJECTS2)
-COBJECTS1 = $(OBJ)DirectoriesBox.c \
-	$(OBJ)FileSystemIterator.c $(OBJ)PathBox.c $(OBJ)SelectorBar.c $(OBJ)Stacker.c $(OBJ)StringsBox.c \
+COBJECTS1 = $(OBJ)DirectoriesBox.c $(OBJ)FileSystemIterator.c $(OBJ)layout.c \
+	$(OBJ)PathBox.c $(OBJ)SelectorBar.c $(OBJ)Stacker.c $(OBJ)StringsBox.c \
 	$(OBJ)ActiveCompilerDialog.c $(OBJ)CompilersDetectionDialog.c $(OBJ)FindInFilesDialog.c \
 	$(OBJ)GlobalSettingsDialog.c $(OBJ)NewProjectDialog.c $(OBJ)NodeProperties.c $(OBJ)ProjectActiveConfig.c \
 	$(OBJ)WorkspaceSettings.c $(OBJ)ProjectTabSettings.c $(OBJ)Project.c $(OBJ)ProjectConfig.c \
@@ -41,12 +40,12 @@ COBJECTS1 = $(OBJ)DirectoriesBox.c \
 	$(OBJ)findExp.c $(OBJ)findParams.c $(OBJ)Sheet.c $(OBJ)ToolBox.c $(OBJ)debugFindCtx.c \
 	$(OBJ)Debugger.c $(OBJ)debugTools.c $(OBJ)GDBDialog.c $(OBJ)process.c $(OBJ)BreakpointsView.c \
 	$(OBJ)CallStackView.c $(OBJ)OutputView.c $(OBJ)ThreadsView.c $(OBJ)WatchesView.c $(OBJ)ModelView.c \
-	$(OBJ)PictureEdit.c $(OBJ)about.c $(OBJ)ide.c
-COBJECTS2 = $(OBJ)IDESettings.c $(OBJ)OldIDESettings.c $(OBJ)ProjectSettings.c
+	$(OBJ)PictureEdit.c $(OBJ)about.c $(OBJ)ide.c $(OBJ)IDESettings.c
+COBJECTS2 = $(OBJ)OldIDESettings.c $(OBJ)ProjectSettings.c
 
 SYMBOLS = $(SYMBOLS1) $(SYMBOLS2)
-SYMBOLS1 = $(OBJ)DirectoriesBox.sym \
-	$(OBJ)FileSystemIterator.sym $(OBJ)PathBox.sym $(OBJ)SelectorBar.sym $(OBJ)Stacker.sym $(OBJ)StringsBox.sym \
+SYMBOLS1 = $(OBJ)DirectoriesBox.sym $(OBJ)FileSystemIterator.sym $(OBJ)layout.sym \
+	$(OBJ)PathBox.sym $(OBJ)SelectorBar.sym $(OBJ)Stacker.sym $(OBJ)StringsBox.sym \
 	$(OBJ)ActiveCompilerDialog.sym $(OBJ)CompilersDetectionDialog.sym $(OBJ)FindInFilesDialog.sym \
 	$(OBJ)GlobalSettingsDialog.sym $(OBJ)NewProjectDialog.sym $(OBJ)NodeProperties.sym \
 	$(OBJ)ProjectActiveConfig.sym $(OBJ)WorkspaceSettings.sym $(OBJ)ProjectTabSettings.sym $(OBJ)Project.sym \
@@ -55,13 +54,13 @@ SYMBOLS1 = $(OBJ)DirectoriesBox.sym \
 	$(OBJ)findExp.sym $(OBJ)findParams.sym $(OBJ)Sheet.sym $(OBJ)ToolBox.sym $(OBJ)debugFindCtx.sym \
 	$(OBJ)Debugger.sym $(OBJ)debugTools.sym $(OBJ)GDBDialog.sym $(OBJ)process.sym \
 	$(OBJ)BreakpointsView.sym $(OBJ)CallStackView.sym $(OBJ)OutputView.sym $(OBJ)ThreadsView.sym \
-	$(OBJ)WatchesView.sym $(OBJ)ModelView.sym
-SYMBOLS2 = $(OBJ)PictureEdit.sym $(OBJ)about.sym $(OBJ)ide.sym $(OBJ)IDESettings.sym \
-	$(OBJ)OldIDESettings.sym $(OBJ)ProjectSettings.sym
+	$(OBJ)WatchesView.sym $(OBJ)ModelView.sym $(OBJ)PictureEdit.sym
+SYMBOLS2 = $(OBJ)about.sym $(OBJ)ide.sym $(OBJ)IDESettings.sym $(OBJ)OldIDESettings.sym \
+	$(OBJ)ProjectSettings.sym
 
 IMPORTS = $(IMPORTS1) $(IMPORTS2)
-IMPORTS1 = $(OBJ)DirectoriesBox.imp \
-	$(OBJ)FileSystemIterator.imp $(OBJ)PathBox.imp $(OBJ)SelectorBar.imp $(OBJ)Stacker.imp $(OBJ)StringsBox.imp \
+IMPORTS1 = $(OBJ)DirectoriesBox.imp $(OBJ)FileSystemIterator.imp $(OBJ)layout.imp \
+	$(OBJ)PathBox.imp $(OBJ)SelectorBar.imp $(OBJ)Stacker.imp $(OBJ)StringsBox.imp \
 	$(OBJ)ActiveCompilerDialog.imp $(OBJ)CompilersDetectionDialog.imp $(OBJ)FindInFilesDialog.imp \
 	$(OBJ)GlobalSettingsDialog.imp $(OBJ)NewProjectDialog.imp $(OBJ)NodeProperties.imp \
 	$(OBJ)ProjectActiveConfig.imp $(OBJ)WorkspaceSettings.imp $(OBJ)ProjectTabSettings.imp $(OBJ)Project.imp \
@@ -70,12 +69,12 @@ IMPORTS1 = $(OBJ)DirectoriesBox.imp \
 	$(OBJ)findExp.imp $(OBJ)findParams.imp $(OBJ)Sheet.imp $(OBJ)ToolBox.imp $(OBJ)debugFindCtx.imp \
 	$(OBJ)Debugger.imp $(OBJ)debugTools.imp $(OBJ)GDBDialog.imp $(OBJ)process.imp \
 	$(OBJ)BreakpointsView.imp $(OBJ)CallStackView.imp $(OBJ)OutputView.imp $(OBJ)ThreadsView.imp \
-	$(OBJ)WatchesView.imp $(OBJ)ModelView.imp
-IMPORTS2 = $(OBJ)PictureEdit.imp $(OBJ)about.imp $(OBJ)ide.imp $(OBJ)IDESettings.imp \
-	$(OBJ)OldIDESettings.imp $(OBJ)ProjectSettings.imp
+	$(OBJ)WatchesView.imp $(OBJ)ModelView.imp $(OBJ)PictureEdit.imp
+IMPORTS2 = $(OBJ)about.imp $(OBJ)ide.imp $(OBJ)IDESettings.imp $(OBJ)OldIDESettings.imp \
+	$(OBJ)ProjectSettings.imp
 
-SOURCES = ../extras/gui/controls/DirectoriesBox.ec \
-	../extras/FileSystemIterator.ec ../extras/gui/controls/PathBox.ec ../extras/gui/controls/SelectorBar.ec \
+SOURCES = ../extras/gui/controls/DirectoriesBox.ec ../extras/FileSystemIterator.ec \
+	../extras/gui/layout.ec ../extras/gui/controls/PathBox.ec ../extras/gui/controls/SelectorBar.ec \
 	../extras/gui/controls/Stacker.ec ../extras/gui/controls/StringsBox.ec src/dialogs/ActiveCompilerDialog.ec \
 	src/dialogs/CompilersDetectionDialog.ec src/dialogs/FindInFilesDialog.ec src/dialogs/GlobalSettingsDialog.ec \
 	src/dialogs/NewProjectDialog.ec src/dialogs/NodeProperties.ec src/dialogs/ProjectActiveConfig.ec \
@@ -201,6 +200,9 @@ $(OBJ)DirectoriesBox.sym: ../extras/gui/controls/DirectoriesBox.ec
 
 $(OBJ)FileSystemIterator.sym: ../extras/FileSystemIterator.ec
 	$(ECP) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) -c ../extras/FileSystemIterator.ec -o $(OBJ)FileSystemIterator.sym
+
+$(OBJ)layout.sym: ../extras/gui/layout.ec
+	$(ECP) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) -c ../extras/gui/layout.ec -o $(OBJ)layout.sym
 
 $(OBJ)PathBox.sym: ../extras/gui/controls/PathBox.ec
 	$(ECP) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) -c ../extras/gui/controls/PathBox.ec -o $(OBJ)PathBox.sym
@@ -341,6 +343,9 @@ $(OBJ)DirectoriesBox.c: ../extras/gui/controls/DirectoriesBox.ec $(OBJ)Directori
 
 $(OBJ)FileSystemIterator.c: ../extras/FileSystemIterator.ec $(OBJ)FileSystemIterator.sym | $(SYMBOLS)
 	$(ECC) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) $(FVISIBILITY) -c ../extras/FileSystemIterator.ec -o $(OBJ)FileSystemIterator.c -symbols $(OBJ)
+
+$(OBJ)layout.c: ../extras/gui/layout.ec $(OBJ)layout.sym | $(SYMBOLS)
+	$(ECC) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) $(FVISIBILITY) -c ../extras/gui/layout.ec -o $(OBJ)layout.c -symbols $(OBJ)
 
 $(OBJ)PathBox.c: ../extras/gui/controls/PathBox.ec $(OBJ)PathBox.sym | $(SYMBOLS)
 	$(ECC) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) $(FVISIBILITY) -c ../extras/gui/controls/PathBox.ec -o $(OBJ)PathBox.c -symbols $(OBJ)
