EDA:SQLite:SQLiteCipher: moved code common to both drivers into EDASQLiteCommon.ec. Matched optimized for speed and -ffast-math details for SQLiteCipher.

--- a/eda/drivers/sqlite/Makefile
+++ b/eda/drivers/sqlite/Makefile
@@ -11,8 +11,6 @@ OBJ = obj/$(CONFIG).$(PLATFORM)/
 
 RES = 
 
-TARGET_TYPE = sharedlib
-
 # CROSS-PLATFORM MAGIC
 
 include ../../../include.mk
@@ -25,15 +23,16 @@ TARGET = obj/$(CONFIG).$(PLATFORM)/$(LP)EDASQLite$(SO)
 SONAME =
 endif
 
-OBJECTS = $(OBJ)sqlite3.o $(OBJ)EDASQLite.o $(OBJ)$(MODULE).main$(O)
+OBJECTS = $(OBJ)sqlite3.o $(OBJ)EDASQLite.o $(OBJ)EDASQLiteCommon.o \
+	$(OBJ)$(MODULE).main$(O)
 
-COBJECTS = $(OBJ)EDASQLite.c
+COBJECTS = $(OBJ)EDASQLite.c $(OBJ)EDASQLiteCommon.c
 
-SYMBOLS = $(OBJ)EDASQLite.sym
+SYMBOLS = $(OBJ)EDASQLite.sym $(OBJ)EDASQLiteCommon.sym
 
-IMPORTS = $(OBJ)EDASQLite.imp
+IMPORTS = $(OBJ)EDASQLite.imp $(OBJ)EDASQLiteCommon.imp
 
-SOURCES = sqlite3.c EDASQLite.ec
+SOURCES = sqlite3.c EDASQLite.ec EDASQLiteCommon.ec
 
 RESOURCES =
 
@@ -114,10 +113,16 @@ endif
 $(OBJ)EDASQLite.sym: EDASQLite.ec
 	$(ECP) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) -c EDASQLite.ec -o $(OBJ)EDASQLite.sym
 
+$(OBJ)EDASQLiteCommon.sym: EDASQLiteCommon.ec
+	$(ECP) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) -c EDASQLiteCommon.ec -o $(OBJ)EDASQLiteCommon.sym
+
 # C OBJECT RULES
 
 $(OBJ)EDASQLite.c: EDASQLite.ec $(OBJ)EDASQLite.sym | $(SYMBOLS)
 	$(ECC) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) $(FVISIBILITY) -c EDASQLite.ec -o $(OBJ)EDASQLite.c -symbols $(OBJ)
+
+$(OBJ)EDASQLiteCommon.c: EDASQLiteCommon.ec $(OBJ)EDASQLiteCommon.sym | $(SYMBOLS)
+	$(ECC) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) $(FVISIBILITY) -c EDASQLiteCommon.ec -o $(OBJ)EDASQLiteCommon.c -symbols $(OBJ)
 
 # IMPLICIT OBJECT RULE
 
