EDASQLiteCipher: fixed bad linux/osx library name (libssl -> crypto) in epj and makefile.

--- a/eda/drivers/sqliteCipher/Makefile
+++ b/eda/drivers/sqliteCipher/Makefile
@@ -99,12 +99,12 @@ LIBS += -llibeay32
 else
 ifdef LINUX
 
-LIBS += -lpthread -ldl -llibssl
+LIBS += -lpthread -ldl -lcrypto
 
 else
 ifdef OSX
 
-LIBS += -lpthread -ldl -llibssl
+LIBS += -lpthread -ldl -lcrypto
 
 endif
 endif
