--- a/ecere/Makefile.ecereCOM
+++ b/ecere/Makefile.ecereCOM
@@ -209,12 +209,52 @@ $(OBJ)String.c: src/com/String.ec $(OBJ)String.sym | $(SYMBOLS)
 $(OBJ)OldList.c: src/com/OldList.ec $(OBJ)OldList.sym | $(SYMBOLS)
 	$(ECC) $(CECFLAGS) $(ECFLAGS) $(CFLAGS) $(FVISIBILITY) -c src/com/OldList.ec -o $(OBJ)OldList.c -symbols $(OBJ)
 
-# IMPLICIT OBJECT RULE
-
-$(OBJ)%$(O) : $(OBJ)%.c
-	$(CC) $(CFLAGS) $(FVISIBILITY) -c $< -o $@
-
 # OBJECT RULES
+
+$(OBJ)Mutex.o: $(OBJ)Mutex.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)Mutex.c -o $(OBJ)Mutex.o
+
+$(OBJ)Array.o: $(OBJ)Array.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)Array.c -o $(OBJ)Array.o
+
+$(OBJ)AVLTree.o: $(OBJ)AVLTree.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)AVLTree.c -o $(OBJ)AVLTree.o
+
+$(OBJ)BuiltInContainer.o: $(OBJ)BuiltInContainer.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)BuiltInContainer.c -o $(OBJ)BuiltInContainer.o
+
+$(OBJ)Container.o: $(OBJ)Container.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)Container.c -o $(OBJ)Container.o
+
+$(OBJ)CustomAVLTree.o: $(OBJ)CustomAVLTree.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)CustomAVLTree.c -o $(OBJ)CustomAVLTree.o
+
+$(OBJ)LinkList.o: $(OBJ)LinkList.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)LinkList.c -o $(OBJ)LinkList.o
+
+$(OBJ)List.o: $(OBJ)List.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)List.c -o $(OBJ)List.o
+
+$(OBJ)Map.o: $(OBJ)Map.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)Map.c -o $(OBJ)Map.o
+
+$(OBJ)BinaryTree.o: $(OBJ)BinaryTree.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)BinaryTree.c -o $(OBJ)BinaryTree.o
+
+$(OBJ)BTNode.o: $(OBJ)BTNode.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)BTNode.c -o $(OBJ)BTNode.o
+
+$(OBJ)dataTypes.o: $(OBJ)dataTypes.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)dataTypes.c -o $(OBJ)dataTypes.o
+
+$(OBJ)instance.o: $(OBJ)instance.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)instance.c -o $(OBJ)instance.o
+
+$(OBJ)String.o: $(OBJ)String.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)String.c -o $(OBJ)String.o
+
+$(OBJ)OldList.o: $(OBJ)OldList.c
+	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)OldList.c -o $(OBJ)OldList.o
 
 $(OBJ)instance.c.o: src/com/instance.c
 	$(CC) $(CFLAGS) -c src/com/instance.c -o $(OBJ)instance.c.o
